ICT-3729 Added an ORB task to run ORB in an other thread. Changes in the supplier:   - Added an option to set the output message frequency in minutes.   - Added a new timer class to output log messages at a given frequency.   - Added an option to set the channel ID. When it's not set, new channel is created.   - Added an option to set an antenna prefix name.   - Run ORB in another thread   - Only close the channel when the supplier is the creator.   - Added an option to set ORB options. Changes in the consumer:   - Added an option to set the output message frequency in minutes.   - Added a new timer class to output log messages at a given frequency.   - Run ORB in another thread   - Added an option to set ORB options.
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@209720 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/corbaNotify/src/Makefile
+++ b/Benchmark/corbaNotify/src/Makefile
@@ -40,11 +40,11 @@ EXECUTABLES_L   =
 
 #
 # <brief description of xxxxx program>
-pDataConsumer_OBJECTS   =	pDataConsumer TimespecUtils
+pDataConsumer_OBJECTS   =	pDataConsumer TimespecUtils ConsumerTimer ORBTask CorbaNotifyUtils
 xxxxx_LDFLAGS   = 
 pDataConsumer_LIBS      = corbaNotifyTest_ifStubs TAO_CosNotification_Serv TAO_CosNotification_MC_Ext
 
-pDataSupplier_OBJECTS   = 	pDataSupplier TimespecUtils
+pDataSupplier_OBJECTS   = 	pDataSupplier TimespecUtils SupplierTimer ORBTask CorbaNotifyUtils
 xxxxx_LDFLAGS   =
 pDataSupplier_LIBS      = corbaNotifyTest_ifStubs TAO_CosNotification_Serv TAO_CosNotification_MC_Ext
 
