Python, C++ and java source sends timestamp in ISO 8601 format (ICTJ:ICT-3747)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@209925 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-core/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/laser-core/.classpath
@@ -48,5 +48,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/systementities.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSJMSMessageEntity.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeLifeCycle.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/jacsutil2.jar"/>
 	<classpathentry kind="output" path="lib"/>
 </classpath>
