--- a/LGPL/CommonSoftware/ACSLaser/laser-source-cpp/src/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/laser-source-cpp/src/Makefile
@@ -89,7 +89,7 @@ laserSourceAcsSpecific_OBJECTS   = 	CERNASIMessage \
 									CERNAlarmSystemInterfaceProxy  \
 									AcsAlarmPublisher \
 									AlarmSupplier
-laserSourceAcsSpecific_LIBS = basenc ACSJMSMessageEntityStubs acsnc acsAlSysSource errTypeAlarmService 
+laserSourceAcsSpecific_LIBS = basenc ACSJMSMessageEntityStubs acsnc acsAlSysSource errTypeAlarmService acsutil
 laserSourceAcsSpecific_LDFLAGS = --export-dynamic -dl -fpic
 
 #
