--- a/LGPL/CommonSoftware/ACSLaser/alarm-clients/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/alarm-clients/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
+	<classpathentry excluding="CDB/|ref/" kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jcont.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/laserclient.jar"/>
@@ -28,5 +28,5 @@
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
-	<classpathentry kind="output" path="object/eclipseOut"/>
+	<classpathentry kind="output" path="lib"/>
 </classpath>
