ICTJ:ICT-3652: The cache of strings used by jlogEngine has been moved in jacsutil2 and made generic in order to be reused to cache timestamped strings i.e. strings that contain a ISO timestamp. This was needed to reuse the cache when getting alarms from the alarm source NC. Alarms have a timestamp but its position is different from that of the logs.
All these modification have been done in 2014-06-ICT-3652-TEMP branch and backported in the trunk after testing.

git-svn-id: https://svn.alma.cl/p2/trunk/ACS@210128 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jacsutil2/.classpath
+++ b/LGPL/CommonSoftware/jacsutil2/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
+	<classpathentry excluding="ref/" kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="var" path="JACORB_HOME/lib/jacorb.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/repeatGuard.jar"/>
@@ -15,5 +15,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/cdbErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/commons-math-2.1.jar"/>
+	<classpathentry kind="var" path="ACSROOT"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
