lib is the output folder
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@210213 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-source/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/laser-source/.classpath
@@ -39,5 +39,5 @@
 	<classpathentry kind="var" path="ACSROOT/lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/AlarmSourceSchemaBindings.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeLifeCycle.jar"/>
-	<classpathentry kind="output" path="idl"/>
+	<classpathentry kind="output" path="lib"/>
 </classpath>
