added loggingStopWatch also to LCU makefile
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@210223 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/logging/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/logging/lcu/src/Makefile
@@ -73,7 +73,7 @@ loggingService_OBJECTS   = logging loggingXMLElement loggingXMLParser loggingLoc
 			   loggingACSLogger  loggingLogSvcHandler \
                            loggingLoggable \
 			   loggingBaseLog loggingHandler loggingLogger loggingLogTrace loggingGetLogger loggingGenericLogger loggingStdoutHandler \
-			   loggingLogThrottle
+			   loggingLogThrottle loggingStopWatch
 #
 # special compilation flags for single c sources
 #yyyyy_CFLAGS   = 
