added CheckDevIOValue template class to check for non-physical values read from DevIO: ICTJ:ICT-3207 Outlier and non-physical values in monitor data
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@210241 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/baci/ws/src/Makefile
+++ b/LGPL/CommonSoftware/baci/ws/src/Makefile
@@ -137,7 +137,7 @@ baci_OBJECTS =  baciValue baciBACIAction baciBACICallback baciBACIMonitor baciUt
 		baci baciTime baciDB \
 		baciRecovery baciCORBA baciDLL \
 		baciEvent baciCDBPropertySet \
-		baciROdouble baciRWdouble \
+		baciROdouble baciRWdouble baciCheckDevIOValue \
 		baciROfloat baciRWfloat \
 		baciROlongLong baciRWlongLong \
 		baciROuLongLong baciRWuLongLong \
