--- a/LGPL/Kit/doc/src/Makefile
+++ b/LGPL/Kit/doc/src/Makefile
@@ -1,5 +1,5 @@
 #*******************************************************************************
-# E.S.O. - VLT project
+# E.S.O. - ALMA project
 #
 # "@(#) $Id: Makefile,v 1.33 2009/06/26 13:47:09 eallaert Exp $" 
 #
@@ -19,9 +19,30 @@
 # eallaert 2009-06-26 added docPrepareComments
 #---------------------------------------------------------------------------
 
+#*******************************************************************************
+# ALMA - Atacama Large Millimeter Array
+# Copyright (c) ESO - European Southern Observatory, 2014
+# (in the framework of the ALMA collaboration).
+# All rights reserved.
+# 
+# This library is free software; you can redistribute it and/or
+# modify it under the terms of the GNU Lesser General Public
+# License as published by the Free Software Foundation; either
+# version 2.1 of the License, or (at your option) any later version.
+# 
+# This library is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+# Lesser General Public License for more details.
+# 
+# You should have received a copy of the GNU Lesser General Public
+# License along with this library; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
+#*******************************************************************************
+
 
 #*******************************************************************************
-# This Makefile follows VLT Standards (see Makefile manpage documentation).
+# This Makefile follows ALMA/ACS Standards (see Makefile manpage documentation).
 #*******************************************************************************
 # REMARKS
 #    none
@@ -137,10 +158,10 @@ man   : do_man
 	@echo " . . . man page(s) done"
 
 install : install_all
-	-if [ -f $(VLTTOP)/paraCatalog.mif ];\
-             then $(RM) $(VLTTOP)/paraCatalog.mif;\
+	-if [ -f $(PRJTOP)/paraCatalog.mif ];\
+             then $(RM) $(PRJTOP)/paraCatalog.mif;\
          fi;\
-         cp paraCatalog.mif $(VLTTOP)
+         cp paraCatalog.mif $(PRJTOP)
 	@echo " . . . installation done"
 
 
