ICT-3707: removed references to VLT/vltMake
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@210366 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Kit/acs/include/Makefile_PACKAGE.template
+++ b/LGPL/Kit/acs/include/Makefile_PACKAGE.template
@@ -1,5 +1,5 @@
 #%# #*******************************************************************************
-#%# # E.S.O. - ACS project
+#%# # E.S.O. - ALMA project
 #%# #
 #%# # "@(#) $Id: Makefile_PACKAGE.template,v 1.12 2010/07/09 12:48:42 alopatin Exp $"
 #%# #
@@ -25,6 +25,27 @@
 # --------  --------  ----------------------------------------------
 # NNNNNNNN  dd/mm/yy  created
 #
+
+# ALMA - Atacama Large Millimeter Array
+# Copyright (c) ESO - European Southern Observatory, 2014
+# (in the framework of the ALMA collaboration).
+# All rights reserved.
+# 
+# This library is free software; you can redistribute it and/or
+# modify it under the terms of the GNU Lesser General Public
+# License as published by the Free Software Foundation; either
+# version 2.1 of the License, or (at your option) any later version.
+# 
+# This library is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+# Lesser General Public License for more details.
+# 
+# You should have received a copy of the GNU Lesser General Public
+# License along with this library; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
+#*******************************************************************************
+
 #*******************************************************************************
 # This Makefile follows ACS Standards (see Makefile(5) for more).
 #*******************************************************************************
