--- a/LGPL/Kit/acs/include/Makefile_LCU.template
+++ b/LGPL/Kit/acs/include/Makefile_LCU.template
@@ -1,9 +1,9 @@
 #%# #*******************************************************************************
-#%# # E.S.O. - ACS project
+#%# # E.S.O. - ALMA project
 #%# #
 #%# # "@(#) $Id: Makefile_LCU.template,v 1.67 2008/04/04 15:04:45 mpasquat Exp $"
 #%# #
-#%# #      REMARK: This file belongs to the "vltMake" module.
+#%# #      REMARK: This file belongs to the "acsMake" module.
 #%# #
 #%# # who       when       what
 #%# # --------  --------   ----------------------------------------------
@@ -28,8 +28,28 @@
 # NNNNNNNN  dd/mm/yy  created
 #
 
+# ALMA - Atacama Large Millimeter Array
+# Copyright (c) ESO - European Southern Observatory, 2014
+# (in the framework of the ALMA collaboration).
+# All rights reserved.
+# 
+# This library is free software; you can redistribute it and/or
+# modify it under the terms of the GNU Lesser General Public
+# License as published by the Free Software Foundation; either
+# version 2.1 of the License, or (at your option) any later version.
+# 
+# This library is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+# Lesser General Public License for more details.
+# 
+# You should have received a copy of the GNU Lesser General Public
+# License along with this library; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 #*******************************************************************************
-# This Makefile follows VLT Standards (see Makefile(5) for more).
+
+#*******************************************************************************
+# This Makefile follows ALMA/ACS Standards (see Makefile(5) for more).
 #*******************************************************************************
 # REMARKS
 #    None
