ICT-3707: as NOCCS has been removed from Kit/acs and the ACS build-scripts, tat's Makefile should in the case of ACS not look for the existence of that variable, but rather to the existence of ACSROOT.
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@210438 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/tat/src/Makefile
+++ b/LGPL/Tools/tat/src/Makefile
@@ -7,6 +7,7 @@
 #
 # who       when      what
 # --------  --------  ----------------------------------------------
+# eallaert 2014-10-22 Set NOCCS if ACSROOT is defined;
 # sfeyrin  2010-09-16 Removed eccsTestDriver, eccsTestSpawner;
 #                     Added include acsMakefile when ACS_ROOT define
 # sfeyrin  2008-12-19 Removed "-f" from expect in *_TCLSH
@@ -25,6 +26,13 @@
 #
 # WARNING: On a standard ACS installation without CCS, ALWAYS SET NOCCS=1
 # 
+
+# ICT-3707: use of NOCCS has been removed from Kit/acs and build-files.
+# If we're running on an ACS-system, set it here locally.
+ifdef ACSROOT
+    NOCCS=1
+endif
+
 ifndef NOCCS
     VCC_LIB = vcc
 endif
