Added generation of manpage for acsReplace (section n).
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@210445 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Kit/acs/src/Makefile
+++ b/LGPL/Kit/acs/src/Makefile
@@ -106,9 +106,10 @@ pppppp_MODULES     =
 #
 # man pages to be done
 # --------------------
-MANSECTIONS = 1 5 
+MANSECTIONS = 1 5 n
 MAN1 = acsMan acsConfigReport.py
 MAN5 = ../include/acsMakefile Makefile.doc
+MANn = acsReplace.tcl
 
 #
 # local man pages
