--- a/LGPL/Kit/acs/test/MakefileMan
+++ b/LGPL/Kit/acs/test/MakefileMan
@@ -16,13 +16,13 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 #
-# "@(#) $Id$"
+# "@(#) $Id: MakefileInstallTest,v 1.2 2013/02/11 12:43:07 eallaert Exp $"
 #
 # Makefile of ........
 #
-# who       when      what
-# --------  --------  ----------------------------------------------
-# hsommer  2009-03-19  created
+# who       when        what
+# --------  ----------  ----------------------------------------------
+# eallaert  2013-01-22  created
 #
 
 #*******************************************************************************
@@ -66,7 +66,8 @@ xxxxx_LIBS      =
 #
 # Includes (.h) files (public only)
 # ---------------------------------
-INCLUDES        =
+# Define INCLUDES as an environment var
+##INCLUDES        = 
 
 #
 # Libraries (public and local)
@@ -82,7 +83,7 @@ lllll_OBJECTS   =
 # Scripts (public and local)
 # ----------------------------
 SCRIPTS         =
-SCRIPTS_L       = acsReplaceTest
+SCRIPTS_L       =
 
 #
 # TCL scripts (public and local)
@@ -157,6 +158,23 @@ XSDBIND=
 XSDBIND_INCLUDE=
 
 #
+# man pages to be done
+# --------------------
+MANSECTIONS = 2 n
+MAN2 = acsMakeMan2.tcl
+MANn = acsMakeMann.tcl
+
+#
+# local man pages
+# ---------------
+MANl = acsMakeManl.tcl
+
+#
+# ASCII file to be converted into Framemaker-MIF
+# --------------------
+ASCII_TO_MIF = 
+
+#
 # other files to be installed
 #----------------------------
 INSTALL_FILES =
@@ -176,13 +194,17 @@ CSOURCENAMES = \
 # INCLUDE STANDARDS
 # -----------------
 
-#!#MAKEDIRTMP := $(shell searchFile include/acsMakefile)
-MAKEDIRTMP := ..
-ifneq ($(MAKEDIRTMP),\#error\#)
-   MAKEDIR := $(MAKEDIRTMP)/include
-   include $(MAKEDIR)/acsMakefile
-endif
-
+# As this makefile is used by a make that can also run within NRI, it can be that
+# the acsMakefile will not be found by searchFile (could be that also searchFile
+# itself is not found).
+# So better force MAKEDIR to refer to the include-dir of this module.
+###MAKEDIRTMP := $(shell searchFile include/acsMakefile)
+###ifneq ($(MAKEDIRTMP),\#error\#)
+###   MAKEDIR := $(MAKEDIRTMP)/include
+###   include $(MAKEDIR)/acsMakefile
+###endif
+MAKEDIR := ../include
+include $(MAKEDIR)/acsMakefile
 #
 # TARGETS
 # -------
