CDB and ref excluded from source folder
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@211049 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jbaci/.classpath
+++ b/LGPL/CommonSoftware/jbaci/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
+	<classpathentry excluding="CDB/|ref/" kind="src" path="test"/>
 	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/prevayler-1.02.001.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
