ICT-3855: commented out LINK_FILES definition
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@212126 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsQoS/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/acsQoS/lcu/src/Makefile
@@ -16,8 +16,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES = acsQoS.cpp acsQoStimeout.cpp ../idl/acsQoSErrType.xml
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES = acsQoS.cpp acsQoStimeout.cpp ../idl/acsQoSErrType.xml
 #
 
 #
