--- a/LGPL/CommonSoftware/acsidlcommon/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/acsidlcommon/lcu/src/Makefile
@@ -34,8 +34,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES = $(addprefix ../idl/, $(addsuffix .idl, $(IDL_FILES)))
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES = $(addprefix ../idl/, $(addsuffix .idl, $(IDL_FILES)))
 #
 
 MAKE_NOIFR_CHECK = on 
