--- a/LGPL/CommonSoftware/maci/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/maci/lcu/src/Makefile
@@ -21,8 +21,8 @@
 #*******************************************************************************
 # REMARKS
 #    None
-#------------------------------------------------------------------------
-LINK_FILES = $(addsuffix .cpp, $(ManagerShutdown_OBJECTS) $(Container_OBJECTS) $(SimpleClient_OBJECTS))
+#------------------------------------------------------------------------ 
+#!# (ICT-3855: commented out) LINK_FILES = $(addsuffix .cpp, $(ManagerShutdown_OBJECTS) $(Container_OBJECTS) $(SimpleClient_OBJECTS))
 
 OPTIMIZE=0
 
