--- a/LGPL/CommonSoftware/maciidl/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/maciidl/lcu/src/Makefile
@@ -31,8 +31,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES = $(addprefix ../idl/, $(addsuffix .idl, $(IDL_FILES))) \
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES = $(addprefix ../idl/, $(addsuffix .idl, $(IDL_FILES))) \
 	     $(addprefix ../idl/, $(addsuffix .xml, $(ACSERRDEF)))
 #
 
