--- a/LGPL/Tools/expat/lcu/src/Makefile
+++ b/LGPL/Tools/expat/lcu/src/Makefile
@@ -17,8 +17,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES =
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES =
 #
 
 #
