--- a/LGPL/CommonSoftware/acscomponent/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/acscomponent/lcu/src/Makefile
@@ -16,8 +16,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES = acscomponentImpl.cpp ../idl/acsErrTypeComponent.xml
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES = acscomponentImpl.cpp ../idl/acsErrTypeComponent.xml
 #
 
 #
