--- a/LGPL/CommonSoftware/acscourse/lcu/src/Makefile1
+++ b/LGPL/CommonSoftware/acscourse/lcu/src/Makefile1
@@ -16,8 +16,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES = ../idl/acscourseMount.idl acscourseMount1Impl.cpp
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES = ../idl/acscourseMount.idl acscourseMount1Impl.cpp
 #
 
 #
