--- a/LGPL/CommonSoftware/acserrTypes/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/acserrTypes/lcu/src/Makefile
@@ -16,8 +16,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES = $(addprefix ../idl/,  $(addsuffix .xml, $(ACSERRDEF)))
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES = $(addprefix ../idl/,  $(addsuffix .xml, $(ACSERRDEF)))
 #
 
 #
