--- a/LGPL/CommonSoftware/acsexmpl/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/acsexmpl/lcu/src/Makefile
@@ -105,7 +105,7 @@ acsexmplHelloWorldImpl_OBJECTS =  $(acsexmplHelloWorldImpl_COMMON) $(acsexmplHel
 #
 # IDL FILES
 #
-IDL_FILES = acsexmplPowerSupply acsexmplMount acsexmplRampedPowerSupply acsexmplLamp acsexmplBuilding acsexmplAmsSeq acsexmplHelloWorld
+IDL_FILES = acsexmplPowerSupply acsexmplMount acsexmplRampedPowerSupply acsexmplLamp acsexmplFridge acsexmplBuilding acsexmplAmsSeq acsexmplHelloWorld
 
 #
 # handle links to common source files (in MODNAME/ws/src)
@@ -115,8 +115,8 @@ COMMON_SOURCES = \
 
 
 # ../idl/acsexmplFridge.midl is added (also) sepratly becausse it has midl prefix and not idl
-# there is also created link ../idl/acsexmplFridge.idl which points to nowhere since ../idl/acsexmplFridge.idl does not exist
-LINK_FILES= $(addprefix ../idl/, $(addsuffix .idl, $(IDL_FILES))) \
+# there is also created link ../idl/acsexmplFridge.idl which points to nowhere since ../idl/acsexmplFridge.idl does not exist 
+#!# (ICT-3855: commented out) LINK_FILES= $(addprefix ../idl/, $(addsuffix .idl, $(IDL_FILES))) \
 	    ../idl/acsexmplFridge.midl \
             $(COMMON_SOURCES)
 
