--- a/LGPL/CommonSoftware/acsthread/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/acsthread/lcu/src/Makefile
@@ -16,8 +16,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES = acsThread.cpp acsThreadBase.cpp ../idl/acsthreadErrType.xml
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES = acsThread.cpp acsThreadBase.cpp ../idl/acsthreadErrType.xml
 #
 
 #
