--- a/LGPL/CommonSoftware/cdb/lcu/test/Makefile
+++ b/LGPL/CommonSoftware/cdb/lcu/test/Makefile
@@ -35,8 +35,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES = ../test/cdbTest.cpp ../test/nodeTest.cpp
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES = ../test/cdbTest.cpp ../test/nodeTest.cpp
 #
 
 #
