--- a/LGPL/CommonSoftware/define/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/define/lcu/src/Makefile
@@ -16,8 +16,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES = ../idl/xmlentity.idl ../idl/archive_xmlstore_if.idl
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES = ../idl/xmlentity.idl ../idl/archive_xmlstore_if.idl
 #
 
 #
