--- a/LGPL/CommonSoftware/loggingidl/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/loggingidl/lcu/src/Makefile
@@ -31,8 +31,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES = ../idl/logging_idl.idl
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES = ../idl/logging_idl.idl
 #
 
 #
