--- a/LGPL/Kit/acs/include/Makefile_LCU.template
+++ b/LGPL/Kit/acs/include/Makefile_LCU.template
@@ -54,8 +54,8 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
-# List of files to be linked
-LINK_FILES =
+# List of files to be linked 
+#!# (ICT-3855: commented out) LINK_FILES =
 #
 
 #
