PROPRIETARY folder renamed NO-LGPL (@see ICTJ:ICT-4181)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@212359 523d945c-050c-4681-91ec-863ad3bb968a

--- a/ExtProd/INSTALL/Makefile
+++ b/ExtProd/INSTALL/Makefile
@@ -51,8 +51,8 @@ clean :
 	rm -rf ../PRODUCTS/java
 	rm -rf ../PRODUCTS/tcltk
 	rm -rf ../PRODUCTS/mico
-	rm -rf ../PROPRIETARY/CCSLite
-	rm -rf ../PROPRIETARY/vw
+	rm -rf ../NO-LGPL/CCSLite
+	rm -rf ../NO-LGPL/vw
 	rm -rf ../PRODUCTS/snakefood-1.4
 	rm -rf *.log *~
 	@echo " . . . clean done"
