ICT-3704 and ICT-3840: Merged to the trunk implementation for c++, java and python from dedicated branch (ICT-3704-TEMP)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@212578 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/logging/ws/src/Makefile
+++ b/LGPL/CommonSoftware/logging/ws/src/Makefile
@@ -96,7 +96,7 @@ $(PROG)_LIBS               = $(TESTLIBS) C++ CCS
 INCLUDES        = 	logging.h loggingExport.h loggingBaseExport.h loggingXMLElement.h loggingXMLParser.h \
 		  	loggingClient.h loggingLocalSyslog.h loggingRemoteSyslog.h loggingLocalFile.h \
 			loggingCacheLogger.h \
-			loggingBaseLog.h loggingHandler.h loggingLogger.h loggingLoggable.h \
+			loggingBaseLog.h loggingStatistics.h loggingHandler.h loggingLogger.h loggingLoggable.h \
                         loggingLogTrace.h loggingACSLogger.h \
 			loggingLogSvcHandler.h  loggingLogLevelDefinition.h \
 			loggingLoggingTSSStorage.h loggingLoggingProxy.h loggingMACROS.h \
@@ -119,7 +119,7 @@ INCLUDES_L      = loggingService.h \
 LIBRARIES       = baselogging logging 
 LIBRARIES_L     =
 
-baselogging_OBJECTS =	loggingBaseLog loggingHandler loggingLogger \
+baselogging_OBJECTS =	loggingBaseLog loggingStatistics loggingHandler loggingLogger \
                         loggingLogTrace loggingGetLogger loggingGenericLogger \
                         loggingStdoutHandler
 ##
