remove do/clean_links targed after removed support from acsMakefile
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@212723 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/maci/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/maci/lcu/src/Makefile
@@ -167,10 +167,10 @@ endif
 #
 # TARGETS
 # -------
-all:	do_links do_all
+all:	 do_all
 	@echo " . . . 'all' done" 
 
-clean : clean_links clean_all 
+clean :  clean_all 
 	$(RM) *~ ../include/*~ ../dbl/*~ ../idl/*~ ../*~ ../../*~ core
 	@echo " . . . clean done"
 
