remove do/clean_links targed after removed support from acsMakefile
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@212728 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdb/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/cdb/lcu/src/Makefile
@@ -87,8 +87,8 @@ IDL_FILES =
 # handle links to common source files (in MODNAME/ws/src)
 # 
 #!# (ICT-3855: commented out) LINK_FILES= $(addprefix ../idl/, $(addsuffix .idl, $(IDL_FILES))) \
-	    $(addsuffix .cpp, $(cdb_OBJECTS_COMMON)) \
-	    $(addprefix ../idl/, $(addsuffix .xml, $(ACSERRDEF)))
+#	    $(addsuffix .cpp, $(cdb_OBJECTS_COMMON)) \
+#	    $(addprefix ../idl/, $(addsuffix .xml, $(ACSERRDEF)))
 #
 #>>>>> END OF standard rules
 
@@ -111,10 +111,10 @@ endif
 #
 # TARGETS
 # -------
-all:	do_links do_all
+all:	do_all
 	@echo " . . . 'all' done" 
 
-clean : clean_links clean_all 
+clean : clean_all 
 	$(RM) *~ ../include/*~ ../dbl/*~ ../idl/*~ ../*~ core
 	@echo " . . . clean done"
 
