--- a/LGPL/CommonSoftware/recovery/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/recovery/lcu/src/Makefile
@@ -146,10 +146,10 @@ endif
 #
 # TARGETS
 # -------
-all:	do_links do_all
+all:	 do_all
 	@echo " . . . 'all' done" 
 
-clean : clean_links clean_all 
+clean :  clean_all 
 	$(RM) *~ ../include/*~ ../dbl/*~ ../idl/*~ ../*~ core
 	@echo " . . . clean done"
 
@@ -170,9 +170,9 @@ COMMON_SOURCES_ORIG = \
 $(COMMON_SOURCES) : $(COMMON_SOURCES_ORIG)
 	- $(AT) if [ ! -h $@ ]; then echo "== Linking source: $@"; ln -s ../../ws/src/$@ $@; fi
 
-do_links: $(COMMON_SOURCES)
+: $(COMMON_SOURCES)
 
-clean_links:
+:
 	$(AT) $(RM) $(COMMON_SOURCES)
 
 #___oOo___
