remove do/clean_links targed after removed support from acsMakefile
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@212746 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/basenc/lcu/src/Makefile
+++ b/LGPL/CommonSoftware/basenc/lcu/src/Makefile
@@ -166,10 +166,10 @@ endif
 #
 # TARGETS
 # -------
-all:	do_links do_all
+all:	do_all
 	@echo " . . . 'all' done" 
 
-clean : clean_links clean_all 
+clean : clean_all 
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
