--- a/LGPL/CommonSoftware/acsGUIs/alarmSourcePanel/.classpath
+++ b/LGPL/CommonSoftware/acsGUIs/alarmSourcePanel/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/laserclient.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsAlarmService.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsAlarmClients.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsASsources.jar"/>
 	<classpathentry kind="output" path="lib"/>
 </classpath>
