ICT-3853: added testing of the proper clean-up of manpages with a "make clean"
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@213643 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Kit/acs/test/MakefileMan
+++ b/LGPL/Kit/acs/test/MakefileMan
@@ -212,12 +212,14 @@ all:	do_all
 	@echo " . . . 'all' done" 
 
 clean : clean_all 
+	@echo `for i in $(MANSECTIONS) l; do ls ../man/man$${i}/; done`
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
 	@echo " . . . clean_dist done"
 
 man   : do_man 
+	@echo `for i in $(MANSECTIONS) l; do ls ../man/man$${i}/; done`
 	@echo " . . . man page(s) done"
 
 install : install_all
