ICTJ:ICT-3703 New test for alarm statistics
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@213700 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-core/test/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/laser-core/test/Makefile
@@ -95,7 +95,8 @@ SCRIPTS     = lasercoreTATPrologue \
             testCDBCoreAlarm \
             testIDLSendAlarm \
 			testRRWithDefaultFM \
-			testRRWithRegExp
+			testRRWithRegExp \
+			testStatistics
 
 SCRIPTS_L       =
 
