ICT-3855: remove support for LINK_FILES
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@213736 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Kit/acs/test/Makefile
+++ b/LGPL/Kit/acs/test/Makefile
@@ -190,9 +190,11 @@ all:	do_all
 	@echo " . . . 'all' done" 
 
 clean : clean_all 
+	@$(RM) sed.scan
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
+	@rm -f sed.scan
 	@echo " . . . clean_dist done"
 
 man   : do_man 
