Reading and writing statistics can be done through castor: added the schema file and tag to enable the generation of the classes in the Makefile.
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@213940 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-core/src/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/laser-core/src/Makefile
@@ -166,7 +166,7 @@ COMPONENT_HELPERS=
 #
 # Java Entity Classes generation on/off
 #
-XSDBIND=
+XSDBIND=AlarmSysStatsSchemaBindings
 #
 # Schema Config files for the above
 #
